<resources>
    <string name="app_name">Will Trip</string>
    <string name="commitment_title">Commitment title:</string>
    <string name="do_it">Do it</string>
    <string name="don_t_do_it">Don\'t do it</string>
    <string name="do_it_excl">Do it!</string>
    <string name="don_t_do_it_excl">Don\'t do it!</string>
    <string name="days_of_the_week">Days of the week:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_all">Select all</string>
    <string name="create">Create</string>
    <string name="use_times_during_the_week">Set times during the week instead of certain days</string>
    <string name="every_day_caps">Every day</string>
    <string name="every_day">every day</string>
    <string name="number_of_days">Times a week:\u0020</string>
    <string name="write_about_your_commitment_here">Write about your commitment here…</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="hard">hard (4)</string>
    <string name="medium">medium (3)</string>
    <string name="easy">easy (2)</string>
    <string name="very_hard">very hard (5)</string>
    <string name="very_easy">very easy (1)</string>
    <string name="infinite">infinite</string>
    <string name="active_till">Active till:\u0020</string>
    <string name="create_commitment">Create commitment</string>
    <string name="description">Description: </string>
    <string name="add_description">Add description</string>
    <string name="select_date">select date</string>
    <string name="set_infinite_duration">set infinite duration</string>
    <string name="description_of_commitment">About your commitment…</string>
    <string-array name="day_types">
        <item>Select certain days</item>
        <item>Set number of days during the week</item>
        <item>Repeat every few days</item>
        <item>Everyday</item>
    </string-array>
    <string name="days_of_week">Days of week:\u0020</string>
    <string name="submit">Submit</string>
    <string name="select_final_date_for_your_commitment">Select final date for your commitment</string>
    <string name="note">Note: you need minimum 21 day to create a new habit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="will_trip">Will trip</string>
    <string name="add_your_new_commitment">Add your new commitment</string>
    <string name="complexity">Complexity:\u0020</string>
    <string name="description_placeholder">Description: %1$s</string>
    <string name="start_date">Start date:\u0020</string>
    <string name="repeat_every">Do every</string>
    <string name="days">days</string>
    <string name="do_every_n_days">Do every %1$s days</string>
    <string name="expand_commitment_description">Expand commitment description</string>
    <string name="edit">edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="no_title_message">Add commitment title</string>
    <string name="no_complexity_message">Select complexity of your commitment</string>
    <string name="data_error_message">Expire date can\'t be earlier than start date</string>
    <string name="no_days_selected_message">Select days when you\'ll follow your commitment</string>
    <string name="no_number_of_times_message">Set number of times during a week, when you\'ll follow your commitment</string>
    <string name="no_repeat_period_message">Set period of repeating your commitment</string>
    <string name="special_days_hint">Read about special days</string>
    <string name="question_mark">\?</string>
    <string name="special_days">Special days:\u0020</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="same_title_message">Commitment with the same name already exists</string>
    <string name="no_activity_found">No activities found on selected day</string>
    <string name="complexity_wp">Complexity wp:</string>
    <string name="chain_length">Chain length:</string>
    <string name="chain_wp">Chain wp:</string>
    <string name="add_comment_here">Add comment here</string>
    <string name="add_comment">\u0020Add comment</string>
    <string name="skip">Skip</string>
    <string name="wp_points">%1$d wp</string>
    <string name="special_day">Special day</string>
    <string name="image">image</string>
    <string name="story_1">Loud knocking to the door woke you up in the morning. On the threshold you saw the confidant of the king. He kindly invited you to the Royal Palace, saying that the matter is urgent. The king himself is waiting for you.\n Approaching the Royal palace, you wonder why the king needs to talk to a simple blacksmith… </string>
    <string name="story_2">My loyal subject, for the last time, my health began to weaken, and my sworn enemy King Bruenor from the southern lands is very powerful and aggressive.\n The Kingdom is in danger. If I die and the southerners come upon us, many innocent citizens of my Kingdom will perish.</string>
    <string name="story_3">Beyond the dry lands, on the East, the dark wizard lives. He possesses secret and powerful spell. If you come back with this spell, the Kingdom can be saved. You are known as one of the best blacksmiths of the Kingdom, your hand is strong and your will is like a steel. I ask you to do this favour for me.</string>
    <string name="story_4">The king has blessed you and wished you not to surrender in the face of difficulties. You have left the Palace and are ready to start the journey.</string>
    <string name="story_5">You\'ve come to the Eastern gates of the city. At the gates you met a guard who is interested in where you are going.</string>
    <string name="story_6">You told the guard about your plans to go beyond the Arden forest. He is very concerned about your story, and wishes you the help of the Almighty God.</string>
    <string name="story_7">No one has entered the Arden forest for many years. Rumor has it that at night there is a huge howl from the wolves, and at dawn you can meet the dead mermaids floating in the forest mist. Behind the Arden forest there are dry lands where you will give all your gold for a drop of water.</string>
    <string name="story_8">You came out to the East to the big valley. You enjoy fine weather, a light wind breezing blowing and birds sing. You have two days journey to the Arden forest through the valley.</string>
    <string name="story_9">The Great valley is beautiful, but you have long way to go.</string>
    <string name="story_10">You have passed the green valley and reached the edge of the Arden forest. There are many bad rumors about this forest, it\'s time to check which of them are true.</string>
    <string name="story_11">You passed some distance in the woods before dark. Strange rustling is heard around, in the distance you hear lingering howl of wolves. You need to sleep, but how to do it in such a disturbing environment?</string>
    <string name="story_12">You need to fall asleep in order to have the strength to continue the trip tomorrow.</string>
    <string name="story_13">In the dream you see a dark forest. The moon shines brightly through the trees. In the haze dark silhouette with a scythe is approaching you. The silhouette swings his scythe and screams \"Haaarrrrgh\".</string>
    <string name="story_14">Waking up, you see a big muscular wolf right in front of you. The wolf bared his teeth and prepares to attack.</string>
    <string name="story_15">You run away, dodging between trees, but the wolf does not lag behind and quickly overtakes you.</string>
    <string name="story_16">Wolf catches you up and knocks you down. Now you see the hungry eyes and bared teeth.</string>
    <string name="story_17">You grab a sharp stick, which lies next to you, and stab it into the wolf\'s throat. Blood splatters from the wound, and the wolf with a squeal jumps out of the way.</string>
    <string name="story_18">You grab the wolf by the tongue and pull it with big force. Wolf jumps out of the way with a squeal, the blood pouring from his mouth. </string>
    <string name="story_19">You leave the Arden forest, and on one of the trees in the distance you see a carved inscription. You wonder what is written there, but the wolf could still be somewhere nearby.</string>
    <string name="story_20">On the tree the inscription is engraved:\n \"It is a rough road that leads to the heights of greatness\". </string>
    <string name="story_21">You see a calm river in front of you. Looking around, you can\'t see the crossing on foot. Apparently, to continue the path you\'ll have to soak your feet.</string>
    <string name="story_22">Already passing the middle of the river, you see a strange movement aside. You turn around to understand the source of this movement.</string>
    <string name="story_23">You realize that the huge alligator is approaching you fast.You swim fast, but the alligator is even faster. You need to collect all your power not to stay at the bottom of this calm river forever.</string>
    <string name="story_24">You spent the night away from the river. In the morning you can see dry lands stretching for miles in front of you. The earth is all cracked from dryness. A small pitcher of water here will be more expensive than gold.</string>
    <string name="story_25">You are on the road for a few days, and the end of these dried up lands is still not visible. You\'re exhausted by heat and thirst. You want to lie down for a few hours, but you know you\'ll never get up.</string>
    <string name="story_26">You continue your trip through the dry lands. You notice the skull of some animal laying on the ground. This land of death always takes its toll.</string>
    <string name="story_27">You take the skull in your hands, when suddenly a snake crawls out of the orbit and bites you.</string>
    <string name="story_28">You take out an oblong flask with water from an eye socket. You drink all the water, and immediately feel an inflow of forces.</string>
    <string name="story_29">You went a few more miles through the dry lands. You need to collect all the forces not to die right here. Suddenly you hear scary sounds from the sky.</string>
    <string name="story_30">You lift your head and you see a big desert eagle flying right at you, exposing its claws. A few more seconds, and it will take you to the place, from where no one has returned.</string>
    <string name="story_31">The desert eagle rushes towards you.</string>
    <string name="story_32">You bounce to the side, and the eagle catches you with claws, cutting clothes and skin. You grab a stone lying on the ground, and when the eagle comes again, you beat it with a great force.</string>
    <string name="story_33">Your clothes are covered in blood. The eagle managed to tear your shoulder and chest. But the wounds don\'t seem dangerous.</string>
    <string name="story_34">Cautiously looking up to the sky, you have two days more continued the path through the dry lands. Finally, when the sun has already begun to set behind the horizon, you have reached the foot of the Dalai mountains.</string>
    <string name="story_35">In the morning you see all the splendor and power of the mountain chain in front of you. Mountains stretch for kilometers, going beyond the horizon. There is no workaround, you need to overcome the mountain.</string>
    <string name="story_36">Overcome the Dalai mountain</string>
</resources>