<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/editImageButton"
        android:src="@drawable/ic_edit_black_48dp"
        android:contentDescription="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/deleteImageButton"
        android:src="@drawable/ic_delete_black_48dp"
        android:contentDescription="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/cancelImageButton"
        android:src="@drawable/ic_undo_black_48dp"
        android:contentDescription="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>